<resources>
    <string name="app_name">NewsSampleApp</string>
    <string name="headlines">Headlines</string>
    <string name="fikter_your_news">Filter your News by Category</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="general">General</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="remove_filter">Remove Filter</string>
</resources>