<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/curved_border"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_baseline_cancel_24"
            android:layout_gravity="end"
            android:id="@+id/cancel" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fikter_your_news"
            android:textSize="22sp"
            android:textColor="@android:color/black"
            android:fontFamily="@font/aclonica"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/business"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_white"
            android:text="@string/business"
            android:textColor="@android:color/black"
            android:paddingEnd="4dp"
            android:paddingStart="4dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/entertainment"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_white"
            android:text="@string/entertainment"
            android:textColor="@android:color/black"
            android:paddingEnd="4dp"
            android:paddingStart="4dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/general"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_white"
            android:text="@string/general"
            android:textColor="@android:color/black"
            android:paddingEnd="4dp"
            android:paddingStart="4dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/health"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_white"
            android:text="@string/health"
            android:textColor="@android:color/black"
            android:paddingEnd="4dp"
            android:paddingStart="4dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp" />
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/science"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_white"
            android:text="@string/science"
            android:textColor="@android:color/black"
            android:paddingEnd="4dp"
            android:paddingStart="4dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/sports"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_white"
            android:text="@string/sports"
            android:textColor="@android:color/black"
            android:paddingEnd="4dp"
            android:paddingStart="4dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp" />
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/technology"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_white"
            android:text="@string/technology"
            android:textColor="@android:color/black"
            android:paddingEnd="4dp"
            android:paddingStart="4dp"
            android:paddingTop="5dp"
            android:layout_marginBottom="5dp"
            android:paddingBottom="5dp" />

    </LinearLayout>

